--- a/reports/portfolio/2013.yaml
+++ b/reports/portfolio/2013.yaml
@@ -2,61 +2,117 @@ period:
   start: 2013-01-01
   end: 2013-12-31
 universe:
-  -
-    ticker: 7203.T
-    asset_class: automobile
-  -
-    ticker: 6758.T
-    asset_class: electronics
-  -
-    ticker: 9984.T
-    asset_class: investment
-  -
-    ticker: 8306.T
-    asset_class: finance
-  -
-    ticker: 6954.T
-    asset_class: industrial
-  -
-    ticker: 4063.T
-    asset_class: materials
-  -
-    ticker: 8035.T
-    asset_class: semiconductor
-  -
-    ticker: 7735.T
-    asset_class: optics
-  -
-    ticker: 4503.T
-    asset_class: pharmaceutical
-  -
-    ticker: 9432.T
-    asset_class: telecom
+- ticker: 7203.T
+  name: Toyota Motor Corporation
+  asset_class: automobile
+- ticker: 6758.T
+  name: Sony Group Corporation
+  asset_class: electronics
+- ticker: 9984.T
+  name: SoftBank Group Corp.
+  asset_class: investment
+- ticker: 8306.T
+  name: Mitsubishi UFJ Financial Group, Inc.
+  asset_class: finance
+- ticker: 6954.T
+  name: FANUC Corporation
+  asset_class: industrial
+- ticker: 4063.T
+  name: Shin-Etsu Chemical Co., Ltd.
+  asset_class: materials
+- ticker: 8035.T
+  name: Tokyo Electron Limited
+  asset_class: semiconductor
+- ticker: 7735.T
+  name: SCREEN Holdings Co., Ltd.
+  asset_class: optics
+- ticker: 4503.T
+  name: Astellas Pharma Inc.
+  asset_class: pharmaceutical
+- ticker: 9432.T
+  name: Nippon Telegraph and Telephone Corporation
+  asset_class: telecom
+- ticker: 7974.T
+  name: Nintendo Co., Ltd.
+  asset_class: entertainment
+- ticker: 6861.T
+  name: Keyence Corporation
+  asset_class: automation
+- ticker: 9983.T
+  name: Fast Retailing Co., Ltd.
+  asset_class: retail
+- ticker: 8058.T
+  name: Mitsubishi Corporation
+  asset_class: trading
+- ticker: 8591.T
+  name: ORIX Corporation
+  asset_class: leasing
+- ticker: 8267.T
+  name: Aeon Co., Ltd.
+  asset_class: consumer_retail
 portfolio:
   weights:
-    7203.T: 0.157076
-    6758.T: 0.200000
-    9984.T: 0.200000
-    8306.T: 0.000000
-    6954.T: 0.000000
-    4063.T: 0.000000
-    8035.T: 0.042924
-    7735.T: 0.000000
-    4503.T: 0.200000
-    9432.T: 0.200000
+    7203.T:
+      name: Toyota Motor Corporation
+      weight: 0.157076
+    6758.T:
+      name: Sony Group Corporation
+      weight: 0.2
+    9984.T:
+      name: SoftBank Group Corp.
+      weight: 0.2
+    8306.T:
+      name: Mitsubishi UFJ Financial Group, Inc.
+      weight: 0.0
+    6954.T:
+      name: FANUC Corporation
+      weight: 0.0
+    4063.T:
+      name: Shin-Etsu Chemical Co., Ltd.
+      weight: 0.0
+    8035.T:
+      name: Tokyo Electron Limited
+      weight: 0.042924
+    7735.T:
+      name: SCREEN Holdings Co., Ltd.
+      weight: 0.0
+    4503.T:
+      name: Astellas Pharma Inc.
+      weight: 0.2
+    9432.T:
+      name: Nippon Telegraph and Telephone Corporation
+      weight: 0.2
+    7974.T:
+      name: Nintendo Co., Ltd.
+      weight: 0.0
+    6861.T:
+      name: Keyence Corporation
+      weight: 0.0
+    9983.T:
+      name: Fast Retailing Co., Ltd.
+      weight: 0.0
+    8058.T:
+      name: Mitsubishi Corporation
+      weight: 0.0
+    8591.T:
+      name: ORIX Corporation
+      weight: 0.0
+    8267.T:
+      name: Aeon Co., Ltd.
+      weight: 0.0
   risk_metrics:
-    annual_return: 0.702440
+    annual_return: 0.70244
     volatility: 0.267459
     sharpe_ratio: 2.626344
     max_drawdown: -0.150676
   classification:
     automobile: 0.157076
-    electronics: 0.200000
-    investment: 0.200000
-    finance: 0.000000
-    industrial: 0.000000
-    materials: 0.000000
+    electronics: 0.2
+    investment: 0.2
+    finance: 0.0
+    industrial: 0.0
+    materials: 0.0
     semiconductor: 0.042924
-    optics: 0.000000
-    pharmaceutical: 0.200000
-    telecom: 0.200000
+    optics: 0.0
+    pharmaceutical: 0.2
+    telecom: 0.2
