Expand universe and add summary report

--- a/data/reference/ticker_names.yaml
+++ b/data/reference/ticker_names.yaml
@@ -14,3 +14,7 @@
 8058.T: Mitsubishi Corporation
 8591.T: ORIX Corporation
 8267.T: Aeon Co., Ltd.
+3382.T: Seven & i Holdings Co., Ltd.
+6301.T: Komatsu Ltd.
+4502.T: Takeda Pharmaceutical Company Limited
+9433.T: KDDI Corporation
