refactor: ユニバースを動的読み込みに変更し、長期データを持つ銘柄に限定
- ticker_names.yamlから動的に銘柄を読み込むようにリファクタリング

- 2009年からデータが存在する銘柄にユニバースを限定し、分析の品質を向上

- 不要になったCLASSIFICATION関連のコードを削除

--- a/data/reference/ticker_names.yaml
+++ b/data/reference/ticker_names.yaml
@@ -1,20 +1,70 @@
-7203.T: Toyota Motor Corporation
-6758.T: Sony Group Corporation
-9984.T: SoftBank Group Corp.
-8306.T: Mitsubishi UFJ Financial Group, Inc.
-6954.T: FANUC Corporation
-4063.T: Shin-Etsu Chemical Co., Ltd.
-8035.T: Tokyo Electron Limited
-7735.T: SCREEN Holdings Co., Ltd.
-4503.T: Astellas Pharma Inc.
-9432.T: Nippon Telegraph and Telephone Corporation
-7974.T: Nintendo Co., Ltd.
-6861.T: Keyence Corporation
-9983.T: Fast Retailing Co., Ltd.
-8058.T: Mitsubishi Corporation
-8591.T: ORIX Corporation
-8267.T: Aeon Co., Ltd.
-3382.T: Seven & i Holdings Co., Ltd.
-6301.T: Komatsu Ltd.
-4502.T: Takeda Pharmaceutical Company Limited
-9433.T: KDDI Corporation
+"1332.T": Nissui
+"4061.T": Denka
+"5714.T": DOWA Holdings
+"7011.T": Mitsubishi Heavy Industries
+"8604.T": NOMURA HOLDINGS, INC.
+"4063.T": Shin-Etsu Chemical
+"7012.T": Kawasaki Heavy Industries
+"1605.T": Inpex Corp
+"4151.T": KYOWA KIRIN CO., LTD.
+"4502.T": TAKEDA PHARMACEUTICAL CO., LTD.
+"4503.T": ASTELLAS PHARMA INC.
+"4506.T": SUMITOMO PHARMA CO., LTD.
+"4507.T": SHIONOGI & CO., LTD.
+"4519.T": CHUGAI PHARMACEUTICAL CO., LTD.
+"4523.T": EISAI CO., LTD.
+"4568.T": DAIICHI SANKYO CO., LTD.
+"6479.T": MINEBEA MITSUMI INC.
+"6501.T": HITACHI, LTD.
+"6503.T": MITSUBISHI ELECTRIC CORP.
+"6504.T": FUJI ELECTRIC CO., LTD.
+"6506.T": YASKAWA ELECTRIC CORP.
+"6594.T": NIDEC CORP.
+"6645.T": OMRON CORP.
+"6674.T": GS YUASA CORP.
+"6701.T": NEC CORP.
+"6702.T": FUJITSU LTD.
+"6723.T": RENESAS ELECTRONICS CORP.
+"6724.T": SEIKO EPSON CORP.
+"6752.T": PANASONIC HOLDINGS CORP.
+"6753.T": SHARP CORP.
+"6758.T": SONY GROUP CORP.
+"6762.T": TDK CORP.
+"6770.T": ALPS ALPINE CO., LTD.
+"6841.T": YOKOGAWA ELECTRIC CORP.
+"6857.T": ADVANTEST CORP.
+"6861.T": KEYENCE CORP.
+"6902.T": DENSO CORP.
+"6952.T": CASIO COMPUTER CO., LTD.
+"6954.T": FANUC CORP.
+"6963.T": ROHM CO., LTD.
+"9984.T": SOFTBANK GROUP CORP.
+"8306.T": MITSUBISHI UFJ FINANCIAL GROUP, INC.
+"8316.T": SUMITOMO MITSUI FINANCIAL GROUP, INC.
+"7974.T": NINTENDO CO., LTD.
+"9983.T": FAST RETAILING CO., LTD.
+"9432.T": NTT, INC.
+"8411.T": MIZUHO FINANCIAL GROUP, INC.
+"8766.T": TOKIO MARINE HOLDINGS, INC.
+"8031.T": MITSUI & CO., LTD.
+"2914.T": JAPAN TOBACCO INC.
+"7267.T": HONDA MOTOR CO., LTD.
+"4661.T": ORIENTAL LAND CO., LTD.
+"6981.T": MURATA MANUFACTURING CO., LTD.
+"6367.T": DAIKIN INDUSTRIES,LTD.
+"8725.T": MS&AD INSURANCE GROUP HOLDINGS, INC.
+"3382.T": SEVEN & I HOLDINGS CO., LTD.
+"6301.T": KOMATSU LTD.
+"8267.T": AEON CO., LTD.
+"8801.T": MITSUI FUDOSAN CO., LTD.
+"2802.T": AJINOMOTO CO., INC.
+"8802.T": MITSUBISHI ESTATE CO., LTD.
+"5803.T": FUJIKURA LTD.
+"7751.T": CANON INC.
+"8308.T": RESONA HOLDINGS, INC.
+"5802.T": SUMITOMO ELECTRIC INDUSTRIES, LTD.
+"9613.T": NOMURA RESEARCH INSTITUTE, LTD.
+"1925.T": DAIWA HOUSE INDUSTRY CO., LTD.
+"7832.T": BANDAI NAMCO HOLDINGS INC.
+"8830.T": SUMITOMO REALTY & DEVELOPMENT CO., LTD.
+"8309.T": SUMITOMO MITSUI TRUST GROUP, INC.
