docs: Update portfolio reports for 2013-2020

--- a/reports/portfolio/2019.yaml
+++ b/reports/portfolio/2019.yaml
@@ -2,117 +2,436 @@ period:
   start: 2019-01-01
   end: 2019-12-31
 universe:
-- ticker: 7203.T
-  name: Toyota Motor Corporation
-  asset_class: automobile
-- ticker: 6758.T
-  name: Sony Group Corporation
-  asset_class: electronics
-- ticker: 9984.T
-  name: SoftBank Group Corp.
-  asset_class: investment
-- ticker: 8306.T
-  name: Mitsubishi UFJ Financial Group, Inc.
-  asset_class: finance
-- ticker: 6954.T
-  name: FANUC Corporation
-  asset_class: industrial
-- ticker: 4063.T
-  name: Shin-Etsu Chemical Co., Ltd.
-  asset_class: materials
-- ticker: 8035.T
-  name: Tokyo Electron Limited
-  asset_class: semiconductor
-- ticker: 7735.T
-  name: SCREEN Holdings Co., Ltd.
-  asset_class: optics
-- ticker: 4503.T
-  name: Astellas Pharma Inc.
-  asset_class: pharmaceutical
-- ticker: 9432.T
-  name: Nippon Telegraph and Telephone Corporation
-  asset_class: telecom
-- ticker: 7974.T
-  name: Nintendo Co., Ltd.
-  asset_class: entertainment
-- ticker: 6861.T
-  name: Keyence Corporation
-  asset_class: automation
-- ticker: 9983.T
-  name: Fast Retailing Co., Ltd.
-  asset_class: retail
-- ticker: 8058.T
-  name: Mitsubishi Corporation
-  asset_class: trading
-- ticker: 8591.T
-  name: ORIX Corporation
-  asset_class: leasing
-- ticker: 8267.T
-  name: Aeon Co., Ltd.
-  asset_class: consumer_retail
+  -
+    ticker: 1332.T
+    name: Nissui
+  -
+    ticker: 4061.T
+    name: Denka
+  -
+    ticker: 5714.T
+    name: DOWA Holdings
+  -
+    ticker: 7011.T
+    name: Mitsubishi Heavy Industries
+  -
+    ticker: 8604.T
+    name: NOMURA HOLDINGS, INC.
+  -
+    ticker: 4063.T
+    name: Shin-Etsu Chemical
+  -
+    ticker: 7012.T
+    name: Kawasaki Heavy Industries
+  -
+    ticker: 1605.T
+    name: Inpex Corp
+  -
+    ticker: 4151.T
+    name: KYOWA KIRIN CO., LTD.
+  -
+    ticker: 4502.T
+    name: TAKEDA PHARMACEUTICAL CO., LTD.
+  -
+    ticker: 4503.T
+    name: ASTELLAS PHARMA INC.
+  -
+    ticker: 4506.T
+    name: SUMITOMO PHARMA CO., LTD.
+  -
+    ticker: 4507.T
+    name: SHIONOGI & CO., LTD.
+  -
+    ticker: 4519.T
+    name: CHUGAI PHARMACEUTICAL CO., LTD.
+  -
+    ticker: 4523.T
+    name: EISAI CO., LTD.
+  -
+    ticker: 4568.T
+    name: DAIICHI SANKYO CO., LTD.
+  -
+    ticker: 6479.T
+    name: MINEBEA MITSUMI INC.
+  -
+    ticker: 6501.T
+    name: HITACHI, LTD.
+  -
+    ticker: 6503.T
+    name: MITSUBISHI ELECTRIC CORP.
+  -
+    ticker: 6504.T
+    name: FUJI ELECTRIC CO., LTD.
+  -
+    ticker: 6506.T
+    name: YASKAWA ELECTRIC CORP.
+  -
+    ticker: 6594.T
+    name: NIDEC CORP.
+  -
+    ticker: 6645.T
+    name: OMRON CORP.
+  -
+    ticker: 6674.T
+    name: GS YUASA CORP.
+  -
+    ticker: 6701.T
+    name: NEC CORP.
+  -
+    ticker: 6702.T
+    name: FUJITSU LTD.
+  -
+    ticker: 6723.T
+    name: RENESAS ELECTRONICS CORP.
+  -
+    ticker: 6724.T
+    name: SEIKO EPSON CORP.
+  -
+    ticker: 6752.T
+    name: PANASONIC HOLDINGS CORP.
+  -
+    ticker: 6753.T
+    name: SHARP CORP.
+  -
+    ticker: 6758.T
+    name: SONY GROUP CORP.
+  -
+    ticker: 6762.T
+    name: TDK CORP.
+  -
+    ticker: 6770.T
+    name: ALPS ALPINE CO., LTD.
+  -
+    ticker: 6841.T
+    name: YOKOGAWA ELECTRIC CORP.
+  -
+    ticker: 6857.T
+    name: ADVANTEST CORP.
+  -
+    ticker: 6861.T
+    name: KEYENCE CORP.
+  -
+    ticker: 6902.T
+    name: DENSO CORP.
+  -
+    ticker: 6952.T
+    name: CASIO COMPUTER CO., LTD.
+  -
+    ticker: 6954.T
+    name: FANUC CORP.
+  -
+    ticker: 6963.T
+    name: ROHM CO., LTD.
+  -
+    ticker: 9984.T
+    name: SOFTBANK GROUP CORP.
+  -
+    ticker: 8306.T
+    name: MITSUBISHI UFJ FINANCIAL GROUP, INC.
+  -
+    ticker: 8316.T
+    name: SUMITOMO MITSUI FINANCIAL GROUP, INC.
+  -
+    ticker: 7974.T
+    name: NINTENDO CO., LTD.
+  -
+    ticker: 9983.T
+    name: FAST RETAILING CO., LTD.
+  -
+    ticker: 9432.T
+    name: NTT, INC.
+  -
+    ticker: 8411.T
+    name: MIZUHO FINANCIAL GROUP, INC.
+  -
+    ticker: 8766.T
+    name: TOKIO MARINE HOLDINGS, INC.
+  -
+    ticker: 8031.T
+    name: MITSUI & CO., LTD.
+  -
+    ticker: 2914.T
+    name: JAPAN TOBACCO INC.
+  -
+    ticker: 7267.T
+    name: HONDA MOTOR CO., LTD.
+  -
+    ticker: 4661.T
+    name: ORIENTAL LAND CO., LTD.
+  -
+    ticker: 6981.T
+    name: MURATA MANUFACTURING CO., LTD.
+  -
+    ticker: 6367.T
+    name: DAIKIN INDUSTRIES,LTD.
+  -
+    ticker: 8725.T
+    name: MS&AD INSURANCE GROUP HOLDINGS, INC.
+  -
+    ticker: 3382.T
+    name: SEVEN & I HOLDINGS CO., LTD.
+  -
+    ticker: 6301.T
+    name: KOMATSU LTD.
+  -
+    ticker: 8267.T
+    name: AEON CO., LTD.
+  -
+    ticker: 8801.T
+    name: MITSUI FUDOSAN CO., LTD.
+  -
+    ticker: 2802.T
+    name: AJINOMOTO CO., INC.
+  -
+    ticker: 8802.T
+    name: MITSUBISHI ESTATE CO., LTD.
+  -
+    ticker: 5803.T
+    name: FUJIKURA LTD.
+  -
+    ticker: 7751.T
+    name: CANON INC.
+  -
+    ticker: 8308.T
+    name: RESONA HOLDINGS, INC.
+  -
+    ticker: 5802.T
+    name: SUMITOMO ELECTRIC INDUSTRIES, LTD.
+  -
+    ticker: 9613.T
+    name: NOMURA RESEARCH INSTITUTE, LTD.
+  -
+    ticker: 1925.T
+    name: DAIWA HOUSE INDUSTRY CO., LTD.
+  -
+    ticker: 7832.T
+    name: BANDAI NAMCO HOLDINGS INC.
+  -
+    ticker: 8830.T
+    name: SUMITOMO REALTY & DEVELOPMENT CO., LTD.
+  -
+    ticker: 8309.T
+    name: SUMITOMO MITSUI TRUST GROUP, INC.
 portfolio:
   weights:
-    7203.T:
-      name: Toyota Motor Corporation
-      weight: 0.074157
-    6758.T:
-      name: Sony Group Corporation
-      weight: 0.131185
-    9984.T:
-      name: SoftBank Group Corp.
-      weight: 0.041543
-    8306.T:
-      name: Mitsubishi UFJ Financial Group, Inc.
-      weight: 0.0
-    6954.T:
-      name: FANUC Corporation
-      weight: 0.0
+    1332.T:
+      name: Nissui
+      weight: 0.101289
+    4061.T:
+      name: Denka
+      weight: 0.000000
+    5714.T:
+      name: DOWA Holdings
+      weight: 0.000000
+    7011.T:
+      name: Mitsubishi Heavy Industries
+      weight: 0.000000
+    8604.T:
+      name: NOMURA HOLDINGS, INC.
+      weight: 0.000000
     4063.T:
-      name: Shin-Etsu Chemical Co., Ltd.
-      weight: 0.161789
-    8035.T:
-      name: Tokyo Electron Limited
-      weight: 0.2
-    7735.T:
-      name: SCREEN Holdings Co., Ltd.
-      weight: 0.0
+      name: Shin-Etsu Chemical
+      weight: 0.000000
+    7012.T:
+      name: Kawasaki Heavy Industries
+      weight: 0.000000
+    1605.T:
+      name: Inpex Corp
+      weight: 0.000000
+    4151.T:
+      name: KYOWA KIRIN CO., LTD.
+      weight: 0.000000
+    4502.T:
+      name: TAKEDA PHARMACEUTICAL CO., LTD.
+      weight: 0.000000
     4503.T:
-      name: Astellas Pharma Inc.
-      weight: 0.191326
-    9432.T:
-      name: Nippon Telegraph and Telephone Corporation
-      weight: 0.2
-    7974.T:
-      name: Nintendo Co., Ltd.
-      weight: 0.0
+      name: ASTELLAS PHARMA INC.
+      weight: 0.000000
+    4506.T:
+      name: SUMITOMO PHARMA CO., LTD.
+      weight: 0.200000
+    4507.T:
+      name: SHIONOGI & CO., LTD.
+      weight: 0.058072
+    4519.T:
+      name: CHUGAI PHARMACEUTICAL CO., LTD.
+      weight: 0.000000
+    4523.T:
+      name: EISAI CO., LTD.
+      weight: 0.000000
+    4568.T:
+      name: DAIICHI SANKYO CO., LTD.
+      weight: 0.000000
+    6479.T:
+      name: MINEBEA MITSUMI INC.
+      weight: 0.000000
+    6501.T:
+      name: HITACHI, LTD.
+      weight: 0.000000
+    6503.T:
+      name: MITSUBISHI ELECTRIC CORP.
+      weight: 0.000000
+    6504.T:
+      name: FUJI ELECTRIC CO., LTD.
+      weight: 0.000000
+    6506.T:
+      name: YASKAWA ELECTRIC CORP.
+      weight: 0.000000
+    6594.T:
+      name: NIDEC CORP.
+      weight: 0.000000
+    6645.T:
+      name: OMRON CORP.
+      weight: 0.000000
+    6674.T:
+      name: GS YUASA CORP.
+      weight: 0.000000
+    6701.T:
+      name: NEC CORP.
+      weight: 0.200000
+    6702.T:
+      name: FUJITSU LTD.
+      weight: 0.000000
+    6723.T:
+      name: RENESAS ELECTRONICS CORP.
+      weight: 0.000000
+    6724.T:
+      name: SEIKO EPSON CORP.
+      weight: 0.000000
+    6752.T:
+      name: PANASONIC HOLDINGS CORP.
+      weight: 0.000000
+    6753.T:
+      name: SHARP CORP.
+      weight: 0.000000
+    6758.T:
+      name: SONY GROUP CORP.
+      weight: 0.000000
+    6762.T:
+      name: TDK CORP.
+      weight: 0.000000
+    6770.T:
+      name: ALPS ALPINE CO., LTD.
+      weight: 0.000000
+    6841.T:
+      name: YOKOGAWA ELECTRIC CORP.
+      weight: 0.000000
+    6857.T:
+      name: ADVANTEST CORP.
+      weight: 0.000000
     6861.T:
-      name: Keyence Corporation
-      weight: 0.0
+      name: KEYENCE CORP.
+      weight: 0.000000
+    6902.T:
+      name: DENSO CORP.
+      weight: 0.000000
+    6952.T:
+      name: CASIO COMPUTER CO., LTD.
+      weight: 0.000000
+    6954.T:
+      name: FANUC CORP.
+      weight: 0.000000
+    6963.T:
+      name: ROHM CO., LTD.
+      weight: 0.000000
+    9984.T:
+      name: SOFTBANK GROUP CORP.
+      weight: 0.000000
+    8306.T:
+      name: MITSUBISHI UFJ FINANCIAL GROUP, INC.
+      weight: 0.000000
+    8316.T:
+      name: SUMITOMO MITSUI FINANCIAL GROUP, INC.
+      weight: 0.000000
+    7974.T:
+      name: NINTENDO CO., LTD.
+      weight: 0.000000
     9983.T:
-      name: Fast Retailing Co., Ltd.
-      weight: 0.0
-    8058.T:
-      name: Mitsubishi Corporation
-      weight: 0.0
-    8591.T:
-      name: ORIX Corporation
-      weight: 0.0
+      name: FAST RETAILING CO., LTD.
+      weight: 0.200000
+    9432.T:
+      name: NTT, INC.
+      weight: 0.000000
+    8411.T:
+      name: MIZUHO FINANCIAL GROUP, INC.
+      weight: 0.000000
+    8766.T:
+      name: TOKIO MARINE HOLDINGS, INC.
+      weight: 0.040640
+    8031.T:
+      name: MITSUI & CO., LTD.
+      weight: 0.000000
+    2914.T:
+      name: JAPAN TOBACCO INC.
+      weight: 0.000000
+    7267.T:
+      name: HONDA MOTOR CO., LTD.
+      weight: 0.000000
+    4661.T:
+      name: ORIENTAL LAND CO., LTD.
+      weight: 0.000000
+    6981.T:
+      name: MURATA MANUFACTURING CO., LTD.
+      weight: 0.000000
+    6367.T:
+      name: DAIKIN INDUSTRIES,LTD.
+      weight: 0.000000
+    8725.T:
+      name: MS&AD INSURANCE GROUP HOLDINGS, INC.
+      weight: 0.000000
+    3382.T:
+      name: SEVEN & I HOLDINGS CO., LTD.
+      weight: 0.000000
+    6301.T:
+      name: KOMATSU LTD.
+      weight: 0.000000
     8267.T:
-      name: Aeon Co., Ltd.
-      weight: 0.0
+      name: AEON CO., LTD.
+      weight: 0.000000
+    8801.T:
+      name: MITSUI FUDOSAN CO., LTD.
+      weight: 0.000000
+    2802.T:
+      name: AJINOMOTO CO., INC.
+      weight: 0.000000
+    8802.T:
+      name: MITSUBISHI ESTATE CO., LTD.
+      weight: 0.000000
+    5803.T:
+      name: FUJIKURA LTD.
+      weight: 0.000000
+    7751.T:
+      name: CANON INC.
+      weight: 0.000000
+    8308.T:
+      name: RESONA HOLDINGS, INC.
+      weight: 0.000000
+    5802.T:
+      name: SUMITOMO ELECTRIC INDUSTRIES, LTD.
+      weight: 0.000000
+    9613.T:
+      name: NOMURA RESEARCH INSTITUTE, LTD.
+      weight: 0.000000
+    1925.T:
+      name: DAIWA HOUSE INDUSTRY CO., LTD.
+      weight: 0.000000
+    7832.T:
+      name: BANDAI NAMCO HOLDINGS INC.
+      weight: 0.200000
+    8830.T:
+      name: SUMITOMO REALTY & DEVELOPMENT CO., LTD.
+      weight: 0.000000
+    8309.T:
+      name: SUMITOMO MITSUI TRUST GROUP, INC.
+      weight: 0.000000
   risk_metrics:
-    annual_return: 0.399131
-    volatility: 0.153784
-    sharpe_ratio: 2.59539
-    max_drawdown: -0.082407
-  classification:
-    automobile: 0.074157
-    electronics: 0.131185
-    investment: 0.041543
-    finance: 0.0
-    industrial: 0.0
-    materials: 0.161789
-    semiconductor: 0.2
-    optics: 0.0
-    pharmaceutical: 0.191326
-    telecom: 0.2
+    annual_return: 0.123713
+    volatility: 0.165566
+    sharpe_ratio: 0.747210
+    max_drawdown: -0.079597
+  training_window:
+    start: 2018-04-24T09:00:00+09:00
+    end: 2018-12-31T09:00:00+09:00
+  evaluation_window:
+    start: 2019-01-04T09:00:00+09:00
+    end: 2019-12-30T09:00:00+09:00
