Use dated Nikkei 225 universes

--- a/data/reference/ticker_names.yaml
+++ b/data/reference/ticker_names.yaml
@@ -212,12 +212,12 @@
 9432.T: NTT, INC.
 9433.T: KDDI CORP.
 9434.T: SOFTBANK CORP.
-9501.T: TOKYO ELECTRIC POWER COMPANY HOLDINGS, INC.
+9501.T: TOKYO ELECTRIC POWER COMPANY HOLDINGS, I
 9502.T: CHUBU ELECTRIC POWER CO., INC.
 9503.T: THE KANSAI ELECTRIC POWER CO., INC.
 9531.T: TOKYO GAS CO., LTD.
 9532.T: OSAKA GAS CO., LTD.
-9602.T: TOHO CO., LTD.
+9602.T: TOHO CO., LTD
 9735.T: SECOM CO., LTD.
 9766.T: KONAMI GROUP CORP.
 9843.T: NITORI HOLDINGS CO., LTD.
